Add install and uninstall scripts modify imv.c

--- a/src/command/mv/Makefile
+++ b/src/command/mv/Makefile
@@ -16,31 +16,22 @@
 #
 
 #Source file
-SRC = mainWindow.c shell.c eval.c execute.c process.c valuelib.c
+SRC = imv.c
 
 #Object file
 OBJS = $(SRC:.c=.o)
 
 #Output execution file
-PROGRAM = mshell
+PROGRAM = imv 
 
 #Compiler
 CC = gcc
-
 
 CFLAGS = -g -Wall
 
 #Include 
 INCLUDE = .
 
-#Libs
-LIBS= --libs gtk+-2.0
-
-CFLAGS = `pkg-config --cflags ${LIBS}` -g -Wall
-
-INSTALL_DIR = /usr/bin
-SRC_SHELL_DIR = .
-SRC_CMD_DIR = ../command
 
 ##########################################################
 #dependency files (.o)
@@ -53,21 +44,8 @@ ${OBJS}:%.o:%.c
 	${CC} -c ${CFLAGS} $< -o $@
 
 
-.PHONY:clean
-clean:
+.PHONY:c
+c:
 	-rm *.o
 
-
 r: clean all
-
-install:
-	cp ${SRC_SHELL_DIR}/mshell ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/ls/ils ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/cat/icat ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/mkdir/imkdir ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/more/imore ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/mv/imv ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/proc/iproc ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/pwd/ipwd ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/rm/irm ${INSTALL_DIR}
-	cp ${SRC_CMD_DIR}/who/iwho ${INSTALL_DIR}
